2007-11-16  Brian Cameron  <brian.cameron@sun.com>

	* www.gnome.org/start/getstable.wml: Updated, adding OpenSolaris.

2007-11-15  Behdad Esfahbod <behdad@gnome.org>

	* www.gnome.org/index.wml: s@Linux@GNU/Linux@

2007-11-14  daniel g. siegel <dgsiegel@gmail.com>

	* www.gnome.org/projects/cheese/detect.py: 
	  update our script on the cheese page

2007-11-12  daniel g. siegel <dgsiegel@gmail.com>

	* www.gnome.org/projects/cheese/data/images/dialog-warning.png,
	  www.gnome.org/projects/cheese/data/themes/cheese/document.screen.css,
	  www.gnome.org/projects/cheese/detect.py,
	  www.gnome.org/projects/cheese/index.html,
	  www.gnome.org/projects/cheese/Makefile.am: 
	  add a new banner on the cheese page

2007-10-31  Karsten Bräckelmann  <guenther@rudersport.de>

	* www.gnome.org/projects/garnome/: 2.21.1 is out, new unstable branch

2007-10-29  Lucas Rocha  <lucasr@gnome.org>

	* www.gnome.org/contact/index.wml: added brazilian contact info.

2007-10-25  Matthew Barnes  <mbarnes@redhat.com>

	* www.gnome.org/projects/evolution/developer.shtml:
	* www.gnome.org/projects/evolution/meeting-logs/2007-10-24.shtml:
	Add IRC meeting log from 2007-10-24.

2007-10-17  Matthew Barnes  <mbarnes@redhat.com>

	* www.gnome.org/projects/evolution/index.shtml:
	Fix an alignment issue.

2007-10-17  Matthew Barnes  <mbarnes@redhat.com>

	* www.gnome.org/projects/evolution/meeting-logs/2007-09-26.shtml:
	* www.gnome.org/projects/evolution/meeting-logs/2007-10-03.shtml:
	* www.gnome.org/projects/evolution/meeting-logs/2007-10-10.shtml:
	Changes look good; apply them to the other meeting logs.

2007-10-17  Matthew Barnes  <mbarnes@redhat.com>

	* www.gnome.org/projects/evolution/head.shtml:
	* www.gnome.org/projects/evolution/meeting-logs/2007-10-17.shtml:
	Attempt to generate more correct XHTML code for meeting logs.

2007-10-17  Matthew Barnes  <mbarnes@redhat.com>

	* www.gnome.org/projects/evolution/developer.shtml: