@@ -211,6 +211,30 @@
 
         <div id="bottomRight">
           <h2>News</h2>
+          <h3>November 18th 2007</h3>
+          <p>
+          We are working very hard on the next Cheese version. Cheese was quite
+          entirely rewritten and we have a tremendous amount of new
+          features.<br />
+          <ul>
+            <li>
+            If you want to help us to test and improve Cheese before it gets
+            stable, please do so and install therefore GStreamer from CVS and
+            Cheese from SVN.
+            </li>
+            <li>
+            If you have a nice idea, of which you think it should be included
+            in the next version, please tell us your idea on the
+            <a href="http://mail.gnome.org/mailman/listinfo/cheese-list">cheese mailing list</a>
+            </li>
+            <li>
+            If want to write a documentation or just help us somehow, just
+            <a href="http://mail.gnome.org/mailman/listinfo/cheese-list">contact us </a>!
+            Any help is appreciated!
+            </li>
+          </ul>
+          </p>
+
           <h3>October 1st 2007</h3>
           <p>
           new website! <a href="http://www.gnome.org/projects/cheese">http://www.gnome.org/projects/cheese</a>
@@ -259,16 +283,6 @@
           <h3>July 1st 2007</h3>
           <p>
           Cheese 0.1.2 was released. <a href="download.html">Get it!</a>
-          </p>
-
-          <h3>June 25th 2007</h3>
-          <p>
-          Cheese 0.1.1 was released. <a href="download.html">Get it!</a>
-          </p>
-
-          <h3>June 12th 2007</h3>
-          <p>
-          Cheese 0.1.0 was released. <a href="download.html">Get it!</a>
           </p>
 
 
