@@ -1,3 +1,8 @@
+2007-11-18  daniel g. siegel <dgsiegel@gmail.com>
+
+	* www.gnome.org/projects/cheese/index.html: 
+	  new news entry for cheese
+
 2007-11-16  Brian Cameron  <brian.cameron@sun.com>
 
 	* www.gnome.org/start/getstable.wml: Updated, adding OpenSolaris.
